app/main/default/objects/Temp_Test__c/fields/ABC__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>ABC__c</fullName>
        <label>ABC</label>
        <length>150</length>
        <type>Text</type>
    </fields>
</CustomObject>