app/main/default/objects/Temp_Test__c/fields/Temp2__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Temp2__c</fullName>
        <label>Temp2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
</CustomObject>