app/main/default/objects/Temp_Test__c/fields/Temp3__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Temp3__c</fullName>
        <label>Temp3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>