app/main/default/objects/Temp_Test__c/fields/Temp__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Temp__c</fullName>
        <formula>IF( $Permission.Test_Permission , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temp</label>
        <type>Text</type>
    </fields>
</CustomObject>